--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load extras %}
 <div id="navigation">
-    <nav id="sidebar" class="d-lg-none">
+    <nav id="sidebar" class="d-lg-none overflow-hidden">
         <div id="dismiss">
             <button type="button" id="sidebarCollapsev" class="navbar-btn">
                 <span></span>
